--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,5 @@ Imports:
   tidyverse (>= 2.0.0),
   dplyr (>= 1.1.4)
 RoxygenNote: 7.3.2
+URL: https://github.com/tnjfrerich/densotools
+BugReports: https://github.com/tnjfrerich/densotools/issues
