--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ License: None
 Encoding: UTF-8
 LazyData: true
 Imports:
-  readr (>= 2.1.5),
-  tidyverse (>= 2.0.0),
-  dplyr (>= 1.1.4)
+    readr (>= 2.1.5),
+    tidyverse (>= 2.0.0),
+    dplyr (>= 1.1.4),
+    magrittr
 RoxygenNote: 7.3.2
 URL: https://github.com/tnjfrerich/densotools
 BugReports: https://github.com/tnjfrerich/densotools/issues
